--- a/jkp.html
+++ b/jkp.html
@@ -8,42 +8,43 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
+    <section>
     <a href="index.html">Back</a>
+    <a href="artwork.html">My artwork</a>
     <main class="container";>
-<div class="text-1">What to do in Jönköping</div>
-<div class="text-2">Fun things to do</div>
-<div class="text-3">Enjoy a good meal</div>
-<section>
-    <div class="container">
+<div class="text-1"><strong>What to do in Jönköping</strong><br />
+    <br/>
+    One of the few things everybody should do in the beginningis to admire the beauty of the city,
+    and the best way of achieving that is by doing these activities:
+    <li>Having a picnic by the lake.</li>
+    <li>Wonder the city with a bike.</li>
+    <li>Get the chance of meeting new students and creating friendships by spending some time at the Student's House.</li>
 <img 
 class="priveliste"
-src="priveliste.jpeg" alt="view" />
-<img
-class="fun"
-src="fun.jpeg" alt="friends" />
-<img
-class="restaurants" 
-src="restaurants.png"  alt="food"/>
-</div>
-<div class="container">
-    <div class="text-4">One of the few things everybody should do in the beginningis to admire the beauty of the city,
-        and the best way of achieving that is by doing these activities:
-        <li>Having a picnic by the lake.</li>
-        <li>Wonder the city with a bike.</li>
-        <li>Get the chance of meeting new students and creating friendships by spending some time at the Student's House.</li></div>
-<div class="text-5">For the students who are always looking for something fun to do I must mention some places like:
+src="priveliste.jpeg" alt="view" /></div>
+
+<div class="text-2"><strong>Fun things to do</strong><br />
+    <br />
+    For the students who are always looking for something fun to do I must mention some places like:
     <li>Akademien which takes place on every Wednesday and only students are allowed.</li>
     <li>Shooters which is free for students on every Monday.</li>
-    <li>For something peaceful, visiting the museums in the area is always a good idea.</li></div>
-<div class="text-6">If you want to enjoy a meal out with your friends then you have a good variety of restaurants where you can choose from, such as:
+    <li>For something peaceful, visiting the museums in the area is always a good idea.</li>
+<img
+class="fun"
+src="fun.jpeg" alt="friends" /></div>
+
+<div class="text-3"><strong>Enjoy a good meal</strong><br />
+    <br />
+    If you want to enjoy a meal out with your friends then you have a good variety of restaurants where you can choose from, such as:
     <li>Basilika</li>
     <li>La Vue</li>
     <li>Nuevo elegante osteria AB</li>
     <li>Bryggan Café & Bistro</li>
     <li> Mr Rice</li>
     <li>Restaurang N.E.O.</li>
-</div>
-</div>
+<img
+class="restaurants" 
+src="restaurants.png"  alt="food"/></div>
 </section>
 </main>
 </body>
