--- a/uzumaki.html
+++ b/uzumaki.html
@@ -12,6 +12,17 @@
     <a href="artwork.html">Back</a>
     </section>
     <img class="uzumaki" src="uzumaki.jpeg" alt="first" />
-    <p> This is a drawing reference inspired by one of my favorite mangaka Junji Ito</p>
+        <p> <strong>This is a drawing reference inspired by one of my favorite mangaka Junji Ito.</strong><br />
+        <br />
+        Junji Ito is a Japanese horror manga artist.
+        Some of his most notable works include Tomie, a series chronicling an immortal girl who drives her stricken admirers to madness; 
+        Uzumaki, a three-volume series about a town obsessed with spirals; and 
+        Gyo, a two-volume story in which fish are controlled by a strain of sentient bacteria called "the death stench."
+        Ito's work consists of many subgenres of horror, mainly being host to the subgenres of body horror and cosmic horror.
+        Much of his work is based solely in them, with other themes including a relationship of predator to prey, a loss of humanity, and obsession being common. 
+        The universe Ito depicts is cruel and capricious; his characters often find themselves victims of malevolent unnatural circumstances 
+        for no discernible reason or punished out of proportion for minor infractions against an unknown and incomprehensible natural order. 
+        He takes inspiration from his own fears as well, including death, war, insects, and being watched.
+        Ito has been cited saying that he draws the manifestation of the mind becoming reality, represented in body horror.</p>
 </body>
 </html>
