--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <h1>Andreea-Bianca Enache</h1>
+        <img class="cryingcat" src="cry cat.jpeg" alt="I hope it's funny" />
+        <img class="moon" src="moon.jpeg" alt="Stages of the moon" />
     </header>
     <section>
         <img 
